# fitbod-server

./: .gitignore  Cargo.toml  README.md  api-documentation.md  justfile
sql/: schema-postgresql.sql  schema-sqlite.sql
src/: api.rs  auth.rs  cache.rs  db.rs  generate_api_docs.rs  lib.rs  main.rs
static/: api-documentation.tera.md  api-request.tera  fitbod-server-list-workouts-request-curl.txt  fitbod-server-list-workouts-request-help.txt  fitbod-server-list-workouts-request-http.txt  fitbod-server-main-help.txt  fitbod-server-new-workouts-request-help.txt  fitbod-server-run-help.txt
test/: sig-example.js
